src/objects/BMCServiceDesk__CMDB_Class__c.object
<CustomObject>
    <description>This object allows you to store data for all CMDB objects.</description>
    <fields>
        <fullName>BMCServiceDesk__Abstract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No</description>
        <inlineHelpText>Checkbox with default No.  If No, it is a regular class</inlineHelpText>
        <label>Abstract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Acronym__c</fullName>
        <description>Holds the Acronym of the class - Required</description>
        <label>Acronym</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Activate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rule Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CMDBClassType__c</fullName>
        <description>Used to differentiate between CI and Asset</description>
        <label>CMDB Class Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CI</fullName>
                    <default>true</default>
                    <label>CI</label>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>CI and Asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Class1InstanceID__c</fullName>
        <label>Class1InstanceID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Class2InstanceID__c</fullName>
        <label>Class2InstanceID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClassDescription__c</fullName>
        <label>ClassDescription</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClassID__c</fullName>
        <description>Holds the unique identifier of the class</description>
        <externalId>true</externalId>
        <label>Class ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClassName__c</fullName>
        <label>Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ClassType__c</fullName>
        <label>ClassType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Class</fullName>
                </value>
                <value>
                    <fullName>Federated Class</fullName>
                </value>
                <value>
                    <fullName>Federated Relationship</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Class_Label__c</fullName>
        <label>Class Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Class__c</fullName>
        <formula>IF( OR(ISBLANK( BMCServiceDesk__Class_Label__c ), ISNULL(BMCServiceDesk__Class_Label__c) ) ,  BMCServiceDesk__ClassName__c , BMCServiceDesk__Class_Label__c)</formula>
        <label>Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Error_Image__c</fullName>
        <label>Error Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Exposure__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Yes</description>
        <inlineHelpText>Checkbox with default Yes</inlineHelpText>
        <label>Display in CMDB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCMDB_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rule Based upon CI Class</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__CMDB_Class__c.BMCServiceDesk__ClassType__c</field>
                <operation>equals</operation>
                <value>Class</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__CMDB_Class__c.BMCServiceDesk__CMDBClassType__c</field>
                <operation>notEqual</operation>
                <value>Asset</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
        <relationshipLabel>CMDB Classes (Rule Class)</relationshipLabel>
        <relationshipName>CMDB_RuleClasses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Image__c</fullName>
        <label>Image (32x32)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsCustomClass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To determine if it is a custom class or out of the box.</description>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Is_Custom_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Custom Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Level__c</fullName>
        <description>This will denote the level of the class in the class hierarchy</description>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Namespace__c</fullName>
        <description>Holds the name space of the class - Required</description>
        <label>Namespace</label>
        <length>70</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OSFormName__c</fullName>
        <description>Namespace:Class  Name</description>
        <label>OSFormName</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Object1__c</fullName>
        <label>Object1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Object2__c</fullName>
        <label>Object2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Role1__c</fullName>
        <label>Role1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Role2__c</fullName>
        <label>Role2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ShortDescription__c</fullName>
        <label>ShortDescription</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SuperClassID__c</fullName>
        <description>called Foreign Key Id in CDM</description>
        <label>SuperClassID</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SuperClass__c</fullName>
        <description>Holds the parent class for this class.  How can we implement this field, should it be picklist with all the class names, but what if that class is already a super class.</description>
        <label>Superclass</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__WeakRefPropagateAttrs__c</fullName>
        <label>WeakRefPropagateAttrs</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__WeakReference__c</fullName>
        <label>WeakReference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CMDB Class</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>BMCServiceDesk__ClassName__c</columns>
        <columns>BMCServiceDesk__ClassID__c</columns>
        <columns>BMCServiceDesk__SuperClass__c</columns>
        <columns>BMCServiceDesk__SuperClassID__c</columns>
        <columns>BMCServiceDesk__Level__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>BMCServiceDesk__Exposure__c</columns>
        <columns>BMCServiceDesk__Abstract__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMDB Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>